# corewar

./: .gitignore  42.cor  42.s  CMakeLists.txt  Makefile  Makefile-Tim  TODO.md  anti-zork.s  asm  author  batman_new.s  corewar  eviltester.sh  map.txt  op.c  proc.h  test  test.sh  test.txt  test_translation.s  tmp  tmp.cor  tmp.s  try.cor  try.s  unclear_points.md  Вопросы.md  О визуализаторе.md
asm_/: Makefile
asm_/includes/: alt_parser.h  asm_struct.h  op.h  parser.h  translation.h
asm_/src/: alt_commons.c  alt_parser.c  alt_utils.c  asm.c  asm_main.c  coords.c  enrich_data.c  free_utils.c  hard_coords.c  init_structs.c  label_value.c  parse_command.c  parsing.c  parsing2.c  print_funcs.c  prints.c  pruning.c  row_functions.c  translate_exec.c
asm_/utils/: dev_print.c  enrich_latest.c  old.c
corewar_/: Makefile
corewar_/includes/: corewar.h  corewar_logs.h  corewar_visu.h
corewar_/src/: cycle.c  dump.c  load.c  main.c  op.c  parse.c
corewar_/src/instruct/: and_instruct.c  fork_instruct.c  ld_instruct.c  lfork_instruct.c  sti_instruct.c  xor_instruct.c  zjmp_instruct.c
corewar_/src/utils/: flow_utils.c  instruction_utils.c  malloc_utils.c  parse_utils.c  proc_utils.c
corewar_/src/visualizer/: sdl_draw_info.c  sdl_draw_map.c  sdl_draw_ratio.c  sdl_launch.c  sdl_loop.c  sdl_utils.c  sdl_utils_2.c
deprecated/: Makefile
eviltests/: comma1.s  comma3.s  command2.s  command5.s  command7.s  command8.s  label4.s  op4.s  op6.s  shift1.s
ft_printf/: Makefile
ft_printf/src/: ft_printf_private.h
ft_printf/src/utils/printing/: pf_putchar.c
include/: corewar.h  corewar_logs.h  op.h  utils.h
includes/: ams_struct.h  asm.h  asm_struct.h  asm_struct_new.h  corewar.h  corewar_logs.h  corewar_visu.h  op.h  operations.h  parser.h  translation.h  utils.h
libft/: Makefile  libft.h
libft/includes/: ft_printf.h  libft.h
libft/src/lib/: ft_abs.c  ft_atoi.c  ft_iswspace.c  ft_quick_sort.c
libft/srcs/ft_printf/: ft_printf_private.h  ft_vprintf.c
libft/srcs/lib/: ft_abs.c  ft_atoi.c
project_utils/: Makefile_printf
sources/: arguments_parser.c  asm.c  asm_main.c  coords.c  dump.c  enrich_data.c  enrich_tools.c  enrich_wide.c  free_utils.c  init_structs.c  is_functions.c  label_value.c  load.c  load_champion.c  main.c  parse_command.c  parsing.c  parsing2.c  print_funcs.c  pruning.c  put_usage.c  row_functions.c  tmp_utils.c  translate_exec.c  translation.c  uni_utils.c  utils.c  writing_modules.c
sources/asm/: asm.c  asm_main.c  coords.c  init_structs.c  is_functions.c  parse_command.c  parsing.c  parsing2.c  row_functions.c
src/: cycle.c  cycle_utils.c  decimate.c  dispatch.c  dump.c  flow_utils.c  instruct_utils.c  load.c  main.c  memory.c  memory_utils.c  op.c  parse.c  run.c  sdl_draw_map.c  sdl_draw_ratio.c  sdl_launch.c  sdl_loop.c  sdl_put_info.c  sdl_test.c  sdl_utils.c  terminate.c
src/instruct/: add_instruct.c  aff_instruct.c  and_instruct.c  fork_instruct.c  ld_instruct.c  ldi_instruct.c  lfork_instruct.c  live_instruct.c  lld_instruct.c  lldi_instruct.c  or_instruct.c  st_instruct.c  sti_instruct.c  sub_instruct.c  utils.c  xor_instruct.c  zjmp_instruct.c  zjump_instruct.c
src/utils/: argument_utils.c  flow_utils.c  ft_atou2.c  ft_numeric.c  ft_xcalloc.c  ft_xmalloc.c  instruction_utils.c  memory_utils.c  parse_utils.c  proc_utils.c
src/visualizer/: sdl_draw_info.c  sdl_draw_map.c  sdl_draw_ratio.c  sdl_launch.c  sdl_loop.c  sdl_utils.c
test/: test  test.sh
test/champions/: 42.s
test/evil/: eviltester.sh
test/evil/eviltests/: comma2.s  command1.s  command3.s  command4.s  command6.s  label1.s  label2.s  nocode.s  op1.s  op2.s  op3.s  op5.s  shift2.s
test/functional/: test.sh
utils/: compare_dumps  dev_print.c  main.c  mock_read.c  parse_logs  test_vm
vm_champs/champs/: Octobre_Rouge_V4.2.s
