cmake_minimum_required(VERSION 3.17)
project(cor_merged C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/includes)

add_executable(cor_merged
        includes/asm_struct.h
        includes/op.h
        includes/operations.h
        includes/parser.h
        includes/translation.h
        libft/includes/ft_printf.h
        libft/includes/libft.h
        libft/sources/lib/ft_abs.c
        libft/sources/lib/ft_atoi.c
        libft/sources/lib/ft_atoi_long.c
        libft/sources/lib/ft_bzero.c
        libft/sources/lib/ft_calloc.c
        libft/sources/lib/ft_factorial.c
        libft/sources/lib/ft_isalnum.c
        libft/sources/lib/ft_isalpha.c
        libft/sources/lib/ft_isascii.c
        libft/sources/lib/ft_isdigit.c
        libft/sources/lib/ft_isint.c
        libft/sources/lib/ft_isprint.c
        libft/sources/lib/ft_iswspace.c
        libft/sources/lib/ft_itoa.c
        libft/sources/lib/ft_itoa_base.c
        libft/sources/lib/ft_long_power.c
        libft/sources/lib/ft_lstadd.c
        libft/sources/lib/ft_lstadd_back.c
        libft/sources/lib/ft_lstdel.c
        libft/sources/lib/ft_lstdelone.c
        libft/sources/lib/ft_lstinsert_after.c
        libft/sources/lib/ft_lstinsert_before.c
        libft/sources/lib/ft_lstiter.c
        libft/sources/lib/ft_lstmap.c
        libft/sources/lib/ft_lstnew.c
        libft/sources/lib/ft_lstnewset.c
        libft/sources/lib/ft_memalloc.c
        libft/sources/lib/ft_memccpy.c
        libft/sources/lib/ft_memchr.c
        libft/sources/lib/ft_memcmp.c
        libft/sources/lib/ft_memcpy.c
        libft/sources/lib/ft_memdel.c
        libft/sources/lib/ft_memmove.c
        libft/sources/lib/ft_memset.c
        libft/sources/lib/ft_nbrmax.c
        libft/sources/lib/ft_nbrmin.c
        libft/sources/lib/ft_power.c
        libft/sources/lib/ft_putchar.c
        libft/sources/lib/ft_putchar_fd.c
        libft/sources/lib/ft_putendl.c
        libft/sources/lib/ft_putendl_fd.c
        libft/sources/lib/ft_putnbr.c
        libft/sources/lib/ft_putnbr_color.c
        libft/sources/lib/ft_putnbr_fd.c
        libft/sources/lib/ft_putstr.c
        libft/sources/lib/ft_putstr_color.c
        libft/sources/lib/ft_putstr_fd.c
        libft/sources/lib/ft_splitdel.c
        libft/sources/lib/ft_str_charcount.c
        libft/sources/lib/ft_strcat.c
        libft/sources/lib/ft_strchr.c
        libft/sources/lib/ft_strclr.c
        libft/sources/lib/ft_strcmp.c
        libft/sources/lib/ft_strcpy.c
        libft/sources/lib/ft_strdel.c
        libft/sources/lib/ft_strdup.c
        libft/sources/lib/ft_strequ.c
        libft/sources/lib/ft_striter.c
        libft/sources/lib/ft_striteri.c
        libft/sources/lib/ft_strjoin.c
        libft/sources/lib/ft_strjoin_free.c
        libft/sources/lib/ft_strlcat.c
        libft/sources/lib/ft_strlen.c
        libft/sources/lib/ft_strmap.c
        libft/sources/lib/ft_strmapi.c
        libft/sources/lib/ft_strncat.c
        libft/sources/lib/ft_strncmp.c
        libft/sources/lib/ft_strncpy.c
        libft/sources/lib/ft_strnequ.c
        libft/sources/lib/ft_strnew.c
        libft/sources/lib/ft_strnstr.c
        libft/sources/lib/ft_strrchr.c
        libft/sources/lib/ft_strrev.c
        libft/sources/lib/ft_strsdup.c
        libft/sources/lib/ft_strsplit.c
        libft/sources/lib/ft_strstr.c
        libft/sources/lib/ft_strsub.c
        libft/sources/lib/ft_strtrim.c
        libft/sources/lib/ft_swap.c
        libft/sources/lib/ft_tolower.c
        libft/sources/lib/ft_toupper.c
        libft/sources/lib/ft_word_count.c
        libft/sources/lib/get_next_line.c
        libft/sources/lib/get_next_line_clean.c
        libft/sources/printf/base.c
        libft/sources/printf/dec_numbers.c
        libft/sources/printf/dec_treatment.c
        libft/sources/printf/float_round_up.c
        libft/sources/printf/float_valide.c
        libft/sources/printf/floats.c
        libft/sources/printf/ft_printf.c
        libft/sources/printf/helpers.c
        libft/sources/printf/long_arithmetic_frac.c
        libft/sources/printf/long_arithmetic_int.c
        libft/sources/printf/long_float_treatment.c
        libft/sources/printf/macros.c
        libft/sources/printf/parse.c
        libft/sources/printf/pf_itoa.c
        libft/sources/printf/print_bin.c
        libft/sources/printf/print_flags.c
        libft/sources/printf/print_iso_func.c
        libft/sources/printf/print_iso_time.c
        libft/sources/printf/print_result.c
        libft/sources/printf/specifier.c
        sources/asm.c
        sources/asm_main.c
        sources/coords.c
        sources/enrich_data.c
        sources/free_utils.c
        sources/init_structs.c
        sources/is_functions.c
        sources/label_value.c
        sources/parse_command.c
        sources/parsing.c
        sources/parsing2.c
        sources/row_functions.c
        sources/tmp_utils.c
        sources/translate_exec.c
        sources/translation.c
        sources/writing_modules.c
        utils/enrich_latest.c
        utils/main.c
        utils/old.c)
