cmake_minimum_required(VERSION 3.17)
project(corewar C)

set(CMAKE_C_STANDARD 11)

include_directories(asm_/includes)
include_directories(corewar_/includes)
include_directories(libft/includes)

add_executable(corewar
        asm_/includes/asm_struct.h
        asm_/includes/op.h
        asm_/includes/operations.h
        asm_/includes/operations.h
        asm_/includes/parser.h
        asm_/includes/translation.h
        asm_/src/asm.c
        asm_/src/asm_main.c
        asm_/src/coords.c
        asm_/src/enrich_data.c
        asm_/src/free_utils.c
        asm_/src/init_structs.c
        asm_/src/is_functions.c
        asm_/src/label_value.c
        asm_/src/parse_command.c
        asm_/src/parsing.c
        asm_/src/parsing2.c
        asm_/src/print_funcs.c
        asm_/src/prints.c
        asm_/src/pruning.c
        asm_/src/put_usage.c
        asm_/src/row_functions.c
        asm_/src/translate_exec.c
        asm_/src/translation.c
        asm_/src/writing_modules.c
        libft/includes/ft_printf.h
        libft/includes/ft_printf_private.h
        libft/includes/libft.h
        libft/src/lib/ft_abs.c
        libft/src/lib/ft_atoi.c
        libft/src/lib/ft_atoi_long.c
        libft/src/lib/ft_bzero.c
        libft/src/lib/ft_calloc.c
        libft/src/lib/ft_factorial.c
        libft/src/lib/ft_isalnum.c
        libft/src/lib/ft_isalpha.c
        libft/src/lib/ft_isascii.c
        libft/src/lib/ft_isdigit.c
        libft/src/lib/ft_isint.c
        libft/src/lib/ft_isprint.c
        libft/src/lib/ft_iswspace.c
        libft/src/lib/ft_itoa.c
        libft/src/lib/ft_itoa_base.c
        libft/src/lib/ft_long_power.c
        libft/src/lib/ft_lstadd.c
        libft/src/lib/ft_lstadd_back.c
        libft/src/lib/ft_lstdel.c
        libft/src/lib/ft_lstdelone.c
        libft/src/lib/ft_lstinsert_after.c
        libft/src/lib/ft_lstinsert_before.c
        libft/src/lib/ft_lstiter.c
        libft/src/lib/ft_lstmap.c
        libft/src/lib/ft_lstnew.c
        libft/src/lib/ft_lstnewset.c
        libft/src/lib/ft_memalloc.c
        libft/src/lib/ft_memccpy.c
        libft/src/lib/ft_memchr.c
        libft/src/lib/ft_memcmp.c
        libft/src/lib/ft_memcpy.c
        libft/src/lib/ft_memdel.c
        libft/src/lib/ft_memmove.c
        libft/src/lib/ft_memset.c
        libft/src/lib/ft_nbrmax.c
        libft/src/lib/ft_nbrmin.c
        libft/src/lib/ft_power.c
        libft/src/lib/ft_putchar.c
        libft/src/lib/ft_putchar_fd.c
        libft/src/lib/ft_putendl.c
        libft/src/lib/ft_putendl_fd.c
        libft/src/lib/ft_putnbr.c
        libft/src/lib/ft_putnbr_color.c
        libft/src/lib/ft_putnbr_fd.c
        libft/src/lib/ft_putstr.c
        libft/src/lib/ft_putstr_color.c
        libft/src/lib/ft_putstr_fd.c
        libft/src/lib/ft_splitdel.c
        libft/src/lib/ft_str_charcount.c
        libft/src/lib/ft_strcat.c
        libft/src/lib/ft_strchr.c
        libft/src/lib/ft_strclr.c
        libft/src/lib/ft_strcmp.c
        libft/src/lib/ft_strcpy.c
        libft/src/lib/ft_strdel.c
        libft/src/lib/ft_strdup.c
        libft/src/lib/ft_strequ.c
        libft/src/lib/ft_striter.c
        libft/src/lib/ft_striteri.c
        libft/src/lib/ft_strjoin.c
        libft/src/lib/ft_strjoin_free.c
        libft/src/lib/ft_strjoin_free_2.c
        libft/src/lib/ft_strlcat.c
        libft/src/lib/ft_strlen.c
        libft/src/lib/ft_strmap.c
        libft/src/lib/ft_strmapi.c
        libft/src/lib/ft_strncat.c
        libft/src/lib/ft_strncmp.c
        libft/src/lib/ft_strncpy.c
        libft/src/lib/ft_strnequ.c
        libft/src/lib/ft_strnew.c
        libft/src/lib/ft_strnstr.c
        libft/src/lib/ft_strrchr.c
        libft/src/lib/ft_strrev.c
        libft/src/lib/ft_strsdup.c
        libft/src/lib/ft_strsplit.c
        libft/src/lib/ft_strstr.c
        libft/src/lib/ft_strsub.c
        libft/src/lib/ft_strtrim.c
        libft/src/lib/ft_swap.c
        libft/src/lib/ft_tolower.c
        libft/src/lib/ft_toupper.c
        libft/src/lib/ft_word_count.c
        libft/src/lib/get_next_line.c
        libft/src/lib/get_next_line_clean.c
        libft/src/printf/complete_specifier/functions/complete_specifier_b.c
        libft/src/printf/complete_specifier/functions/complete_specifier_c.c
        libft/src/printf/complete_specifier/functions/complete_specifier_f.c
        libft/src/printf/complete_specifier/functions/complete_specifier_i.c
        libft/src/printf/complete_specifier/functions/complete_specifier_o.c
        libft/src/printf/complete_specifier/functions/complete_specifier_p.c
        libft/src/printf/complete_specifier/functions/complete_specifier_s.c
        libft/src/printf/complete_specifier/functions/complete_specifier_u.c
        libft/src/printf/complete_specifier/functions/complete_specifier_x.c
        libft/src/printf/complete_specifier/complete_specifier.c
        libft/src/printf/data_specifier/functions/data_specifier_c.c
        libft/src/printf/data_specifier/functions/data_specifier_f.c
        libft/src/printf/data_specifier/functions/data_specifier_i.c
        libft/src/printf/data_specifier/functions/data_specifier_p.c
        libft/src/printf/data_specifier/functions/data_specifier_pc.c
        libft/src/printf/data_specifier/functions/data_specifier_s.c
        libft/src/printf/data_specifier/functions/data_specifier_u.c
        libft/src/printf/data_specifier/data_specifier.c
        libft/src/printf/parse_specifier/parse_specifier.c
        libft/src/printf/print_specifier/functions/print_specifier_b.c
        libft/src/printf/print_specifier/functions/print_specifier_c.c
        libft/src/printf/print_specifier/functions/print_specifier_f.c
        libft/src/printf/print_specifier/functions/print_specifier_i.c
        libft/src/printf/print_specifier/functions/print_specifier_o.c
        libft/src/printf/print_specifier/functions/print_specifier_p.c
        libft/src/printf/print_specifier/functions/print_specifier_s.c
        libft/src/printf/print_specifier/functions/print_specifier_u.c
        libft/src/printf/print_specifier/functions/print_specifier_x.c
        libft/src/printf/print_specifier/functions/print_specifier_xx.c
        libft/src/printf/print_specifier/print_specifier.c
        libft/src/printf/utils/printing/pf_putchar.c
        libft/src/printf/utils/printing/pf_putfloat.c
        libft/src/printf/utils/printing/pf_putint.c
        libft/src/printf/utils/printing/pf_putnchar.c
        libft/src/printf/utils/printing/pf_puts.c
        libft/src/printf/utils/printing/pf_putuint.c
        libft/src/printf/utils/get_ndigits_int.c
        libft/src/printf/utils/get_ndigits_uint.c
        libft/src/printf/utils/min.c
        libft/src/printf/validate_specifier/functions/validate_specifier_b.c
        libft/src/printf/validate_specifier/functions/validate_specifier_c.c
        libft/src/printf/validate_specifier/functions/validate_specifier_f.c
        libft/src/printf/validate_specifier/functions/validate_specifier_i.c
        libft/src/printf/validate_specifier/functions/validate_specifier_p.c
        libft/src/printf/validate_specifier/functions/validate_specifier_s.c
        libft/src/printf/validate_specifier/functions/validate_specifier_u.c
        libft/src/printf/validate_specifier/functions/validate_specifier_x.c
        libft/src/printf/validate_specifier/validate_specifier.c
        libft/src/printf/ft_asprintf.c
        libft/src/printf/ft_dprintf.c
        libft/src/printf/ft_printf.c
        libft/src/printf/ft_snprintf.c
        libft/src/printf/ft_sprintf.c
        libft/src/printf/ft_vasprintf.c
        libft/src/printf/ft_vdprintf.c
        libft/src/printf/ft_vprintf.c
        libft/src/printf/ft_vsnprintf.c
        libft/src/printf/ft_vsprintf.c)
